# clEnvironment

./: .gitignore  CMakeLists.txt  README.md
clEnvironment/: CMakeLists.txt  clEnvironment.cpp  clEnvironment.h
clEnvironment/include/: clEnvironment.h
cmake/: clEnvironmentConfig.cmake.in
